--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,8 +3,11 @@
     <head>
         <meta charset = "UTF-8">
         <title>Noninertial Frame</title>
-        <link href="https://fonts.googleapis.com/css?family=Lato:400,900|Open+Sans:400,400i,700" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,800|Roboto:400,900" rel="stylesheet">
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="/stylesheets/head.css">
+        <link rel="stylesheet" href="/stylesheets/general.css">
+        <script src="https://use.fontawesome.com/6987730bbf.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     </head>
     <body>
