--- a/views/partials/siteHead.ejs
+++ b/views/partials/siteHead.ejs
@@ -1,8 +1,8 @@
-<div class="head">
-    <div id="pageTitle">NonInertial Frame</div>
+<div id="head">
+    <div id="pageTitle"><a href="/">NonInertial Frame</a></div>
     <ul class="routeList">
         <li id="aboutMe" class="route"><a href="/aboutme">About Me</a></li>
-        <li id="home" class="route selected"><a href="/">Home</a></li>
+        <li id="home" class="route"><a href="/">Home</a></li>
         <li id="aboutSite" class="route"><a href="/aboutsite">About Site</a></li>
     </ul>
     <hr id="headerLine">
