--- a/views/postpage.ejs
+++ b/views/postpage.ejs
@@ -50,13 +50,15 @@
         <textarea class="form-control" rows="4" placeholder="Enter comment" id="contentInput"></textarea> <!--name="newComment"> -->
     </div>
     <div id="submitArea">
-        <div id="nicknameInputDiv">
-            <label for="nicknameInput">Nickname</label>
-            <span class="commentFormInput"><input class="form-control inputBox" type="text" id="nicknameInput"></span>
-        </div>
-        <div id="passwordInputDiv">
-            <label for="passwordInput">Password</label>
-            <span class="commentFormInput"><input class="form-control inputBox" type="password" id="passwordInput"></span>
+        <div id="submitRow">
+            <div id="nicknameInputDiv">
+                <label for="nicknameInput">Nickname</label>
+                <span class="commentFormInput"><input class="form-control inputBox" type="text" id="nicknameInput"></span>
+            </div>
+            <div id="passwordInputDiv">
+                <label for="passwordInput">Password</label>
+                <span class="commentFormInput"><input class="form-control inputBox" type="password" id="passwordInput"></span>
+            </div>
         </div>
         <div id="commentSubmit">
         <input type="submit" id="commentSubmitBtn" value="Post">
